5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1807_2570.log
== SUBMITION (2019-06-13 16:53:32) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
fox x in range (size(v)):
	soma = soma + v[x]
	
media = soma/size(v)

for x in range(size(v)):
	p = p * abs(v[x]-media)
print(round(sqrt(v),2))
-- EXECUTION TIME:
0.845864
-- ERROR:
  File "/home/codebench/codes/1807/2570/main.py", line 7
    fox x in range (size(v)):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:53:50) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
fox x in range (size(v)):
	soma = soma + v[x]
	
media = soma/size(v)

for x in range(size(v)):
	p = p * abs(v[x]-media)
print(round(sqrt(v),3))
-- EXECUTION TIME:
0.715298
-- ERROR:
  File "/home/codebench/codes/1807/2570/main.py", line 7
    fox x in range (size(v)):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-16 15:50:05) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
fox x in range (size(v)):
	soma = soma + v[x]
	
media = soma/size(v)

for x in range(size(v)):
	p = p * (p * abs(v[x]-media))
total = p**(1/(size(v)))
print(round(sqrt(v),3))
-- EXECUTION TIME:
0.926533
-- ERROR:
  File "/home/codebench/codes/1807/2570/main.py", line 8
    fox x in range (size(v)):
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:50:11) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
fox x in range (size(v)):
	soma = soma + v[x]
	
media = soma/size(v)

for x in range(size(v)):
	p = p * (p * abs(v[x]-media))
total = p**(1/(size(v)))
print(round(sqrt(v),3))
-- ERROR:
File "XXXX", line 8
    fox x in range (size(v)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-16 15:50:36) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
for x in range (size(v)):
	soma = soma + v[x]
	
media = soma/size(v)

for x in range(size(v)):
	p = p * (p * abs(v[x]-media))
total = p**(1/(size(v)))
print(round(sqrt(v),3))
-- EXECUTION TIME:
0.968307
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1807/2570/main.py", line 16, in <module>
    print(round(sqrt(v),3))
TypeError: only size-1 arrays can be converted to Python scalars

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:50:37) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
for x in range (size(v)):
	soma = soma + v[x]
	
media = soma/size(v)

for x in range(size(v)):
	p = p * (p * abs(v[x]-media))
total = p**(1/(size(v)))
print(round(sqrt(v),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-16 15:51:01) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
for x in range (size(v)):
	soma = soma + v[x]
	
media = soma/size(v)

for x in range(size(v)):
	p = p * (p * abs(v[x]-media))
total = p**(1/(size(v)))
print(round(sqrt(p),3))
-- EXECUTION TIME:
1.25661
-- TEST CASE 1:
---- input:
[-25,8,-6,10,12,13,-4,-7,-9]
---- correct output:
8.839
---- user output:
0.0
-- TEST CASE 2:
---- input:
[-1.5,-5.5,-3.8,-9.6,-12.8,-13.3,-15.9]
---- correct output:
3.757
---- user output:
0.0
-- TEST CASE 3:
---- input:
[32.2,31.6,42.8,61.7,10.5,52.7,15.9,17.8,19.2]
---- correct output:
0.212
---- user output:
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:51:03) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
for x in range (size(v)):
	soma = soma + v[x]
	
media = soma/size(v)

for x in range(size(v)):
	p = p * (p * abs(v[x]-media))
total = p**(1/(size(v)))
print(round(sqrt(p),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:51:32) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
for x in range (size(v)):
	soma = soma + v[x]
	
media = soma/size(v)

for x in range(size(v)):
	p = p + p * (p * abs(v[x]-media))
total = p**(1/(size(v)))
print(round(sqrt(p),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:54:05) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
for x in range (size(v)):
	soma = soma + v[x]
	
media = soma/size(v)

for x in range(size(v)):
	p = p + p * (p * abs(v[x]-media))
total = p**(1/(size(v)))
print(round(sqrt(p),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:54:32) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
for x in range (size(v)):
	soma = soma + v[x]
	
media = soma/size(v)

for x in range(size(v)):
	print(  (p * abs(v[x]-media)))
total = p**(1/(size(v)))
print(round(sqrt(p),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:56:35) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
for x in range (size(v)):
	soma = soma + v[x]
	print(v[x])
media = soma/size(v)

for x in range(size(v)):
	print(  ( abs(v[x]-media)))
total = p**(1/(size(v)))
print(round(sqrt(p),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 15:59:29) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
for x in range (size(v)):
	soma = soma + v[x]
	print(v[x])
media = soma/size(v)

for x in range(size(v)):
	print(  ( abs(v[x]-media)))
total = p**(1/(size(v)))
print(round(sqrt(total),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 16:03:03) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
for x in range (size(v)):
	soma = soma + v[x]
	print(v[x])
media = soma/size(v)

for x in range(size(v)-1):
	p = p + abs(v[x]-media) * abs(v[x+1] - media)
total = p**(1/(size(v)))
print(round(sqrt(total),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 16:03:27) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
for x in range (size(v)):
	soma = soma + v[x]
	print(v[x])
media = soma/size(v)

for x in range(size(v)):
	p = p + abs(v[x]-media) 
total = p**(1/(size(v)))
print(round(sqrt(total),3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 16:05:24) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
for x in range (size(v)):
	soma = soma + v[x]
	print(v[x])
media = soma/size(v)

for x in range(size(v)):
	p = p + abs(v[x]-media) 
total = p**(1/(size(v)))
print(round(total),3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 16:05:41) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
for x in range (size(v)):
	soma = soma + v[x]
	print(v[x])
media = soma/size(v)

for x in range(size(v)-1):
	p = p + abs(v[x]-media) * abs(v[x+1] - media)
total = p**(1/(size(v)))
print(round(total),3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 16:06:00) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
for x in range (size(v)):
	soma = soma + v[x]
	print(v[x])
media = soma/size(v)

for x in range(size(v)-1):
	p = p + abs(v[x]-media) * abs(v[x+1] - media)
total = p**(1/(size(v)))
print(round(total,3)
-- ERROR:
File "XXXX", line 17
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 16:06:07) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
for x in range (size(v)):
	soma = soma + v[x]
	print(v[x])
media = soma/size(v)

for x in range(size(v)-1):
	p = p + abs(v[x]-media) * abs(v[x+1] - media)
total = p**(1/(size(v)))
print(round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-16 16:06:16) 
-- CODE:
from numpy import *
from math import *
v = array(eval(input()))

p = 0
soma = 0
total = 0
for x in range (size(v)):
	soma = soma + v[x]
	print(v[x])
media = soma/size(v)

for x in range(size(v)-1):
	p = p + abs(v[x]-media) * abs(v[x+1] - media)
total = p**(1/(size(v)))
print(round(total,3)*2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
